# collaborative-editor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
include/: logger  logger_main.cpp
include/client/editor/: document.h
include/common/crdt/: crdt_document.h  document.h
include/common/document/: document_controller.h  history_manager.h  operation_manager.h
include/common/models/: file_system.h
include/common/network/: tcp_connection.h
include/common/protocol/: protocol.h
include/common/util/: collabedit.env  config_loader.cpp  config_loader.h  logger.h  uuid_generator.h
include/server/: main.cpp  server.h  session_handler.h
include/server/network/: connection.h
include/server/session/: server_manager.h
src/client/: CMakeLists.txt  client_placeholder.cpp  document_client.cpp  document_client.h  document_editor.cpp  document_editor.h  main.cpp  ncurses_client.cpp  session_manager.cpp  session_manager.h  terminal_client.cpp
src/client/network/: client_manager.h
src/common/: CMakeLists.txt  common_placeholder.cpp
src/common/crdt/: crdt_document.cpp  document.cpp
src/common/document/: document_controller.cpp  history_manager.cpp  operation_manager.cpp
src/common/models/: document.cpp  file_system.cpp
src/common/ot/: document_manager.cpp  document_manager.h  editor.cpp  editor.h  history.cpp  history.h  operation.cpp  operation.h  opereation.cpp  undo_redo_manager.cpp  undo_redo_manager.h
src/common/protocol/: protocol.cpp
src/common/util/: uuid_generator.cpp
src/examples/: collaboration_example.cpp
src/server/: CMakeLists.txt  main.cpp  server.cpp  session_handler.cpp
tests/: CMakeLists.txt
tests/client/: dummy_client_test.cpp
tests/common/: dummy_test.cpp
tests/common/util/: config_loader_test.cpp  test_helpers.cpp
tests/server/: dummy_server_test.cpp  server_test.cpp  session_handler_test.cpp
tests/utils/: test_helpers.cpp
